--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"keywords": [
 		"oxid",
 		"themes",
-		"eShop"
+		"eShop",
+		"css-grid"
 	],
 	"homepage": "https://internetservice.winde-ganzig.de",
 	"license": [
