--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"devDependencies": {
 		"@fortawesome/fontawesome-free": "^5.11.2",
 		"ajv": "^6.10.2",
-		"bootstrap": "5.0.2",
+		"bootstrap": "4.6.1",
 		"grunt": "^1.3.0",
 		"grunt-combine-mq": "^0.9.0",
 		"grunt-contrib-clean": "^2.0.0",
@@ -26,7 +26,8 @@
 		"grunt-sass": "^3.1.0",
 		"grunt-stylelint": "^0.11.1",
 		"grunt-uncss": "^0.9.0",
-		"jquery": "3.4.1",
+		"gulp-uglify-es": "^3.0.0",
+		"jquery": "3.5.1",
 		"jquery-ui": "1.12.1",
 		"matchdep": "^2.0.0",
 		"node-sass": "^6.0.1",
@@ -45,6 +46,5 @@
 		"type": "git",
 		"url": "https://github.com/swinde/grid-theme/"
 	},
-	"license": "ISC",
-	"dependencies": {}
+	"license": "ISC"
 }
