--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"devDependencies": {
 		"@fortawesome/fontawesome-free": "^5.11.2",
 		"ajv": "^6.10.2",
-		"bootstrap": "5.1.0",
+		"bootstrap": "5.0.2",
 		"grunt": "^1.4.1",
 		"grunt-combine-mq": "^0.9.0",
 		"grunt-contrib-clean": "^2.0.0",
@@ -32,7 +32,7 @@
 		"matchdep": "^2.0.0",
 		"node-sass": "^6.0.1",
 		"pixrem": "^5.0.0",
-		"popper.js": "^1.15.0",
+		"popper.js": "^2.0.0-next.4",
 		"postcss": "^5.0.0",
 		"stylelint": "^11.1.1",
 		"stylelint-scss": "^3.11.1",
